Pequenas modificações no css

--- a/Projeto_01/src/index.html
+++ b/Projeto_01/src/index.html
@@ -36,7 +36,7 @@
                 <i class="fa-solid fa-circle-down"></i>
             </div>
 
-            <div id="'about">
+            <div id="about">
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Quidem beatae sapiente at aliquid exercitationem non in, dolore architecto facilis eos laudantium corporis saepe velit.
