--- a/Projeto_01/src/index.html
+++ b/Projeto_01/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <img src="images/logo.jpg" alt="logo">
+            <img id="logo" src="images/logo.png" alt="logo">
         </div>
         <ul>
             <li>
