Acrescentando hover e pequenas animações no projeto

--- a/Projeto_01/src/index.html
+++ b/Projeto_01/src/index.html
@@ -29,7 +29,7 @@
         <section class="container">
             <div class="name">
                 <h1>Lucas Emanuel</h1>
-                <h5>Developer</h5>
+                <h5>Back-end Developer</h5>
             </div>
 
             <div class="arrow">
