Fazendo conexão html com js

--- a/JavaScript_/Basico_ValidadorCPF/index.html
+++ b/JavaScript_/Basico_ValidadorCPF/index.html
@@ -60,6 +60,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"></script>
 
-
+<!-- Validador CPF -->
+<script src="./script.js"></script>
 
 </html>
